<resources>
    <string name="app_name">TriTrack</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Training Session Log</string>//header for training session
    <string name="menu_sessionlist">Training Session List</string>//header for training session list
    <string name="menu_racelog">Race Time Log</string>//Header for race time log
    <string name="menu_leaderboard">Leaderboard</string>//Header for Leaderboard

    <string name="logSwim">Swim</string>//Swim Radio Button
    <string name="logRun">Run</string>//Run Radio Button
    <string name="logCycle">Cycle</string>//Cycle Radio Button

    //logfragment strings
    <string name="homeTitle">Get Moving</string>//Log page welcome message
    <string name="homeSubtitle">What did you do today?</string>//Log page subtitle
    <string name="amount">Amount</string>
    <string name="trainingButton">LOG</string>//Log page button
    <string name="totalTime">Total Time</string>//Total Time trained
    <string name="total">Total</string>//Training Time
    <string name="sessionList">Training Sessions</string>//List page title
    <string name="racelogTitle">Log Your Race Time</string>//Race page title
    <string name="racelistTitle">Your Race Times</string>//Race times recycler title
    <string name="leaderboard">Leader Board</string>
    <string name="enter_time">Enter your time</string>
    <string name="log">Log</string>//Leaderboard title
</resources>