<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/logFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.log.LogFragment"
    tools:ignore="InvalidId">


    <TextView
        android:id="@+id/text_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/homeTitle"
        android:textAlignment="center"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/homeSubtitle"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/homeSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_home"
        android:layout_alignEnd="@+id/text_home"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="48dp"
        android:text="@string/homeSubtitle"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/logMethod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/homeSubtitle"
        android:layout_alignParentStart="true"
        android:layout_margin="60dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/logSwim"
            android:layout_width="97dp"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/logSwim"
            android:textSize="18sp"
            android:layout_marginRight="10dp"/>

        <RadioButton
            android:id="@+id/logCycle"
            android:layout_width="97dp"
            android:layout_height="60dp"
            android:checked="false"
            android:text="@string/logCycle"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/logRun"
            android:layout_width="97dp"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/logRun"
            android:textSize="18sp"
            android:layout_marginLeft="20dp"/>

    </RadioGroup>

    <TextView
        android:id="@+id/totalTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/totalTime"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logbutton" />

    <Button
        android:id="@+id/logbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/trainingButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logTime" />

    <EditText
        android:id="@+id/logTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:autofillHints="Please Enter Your Time"
        android:ems="10"
        android:hint="@string/enter_time"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logMethod" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="60dp"
        android:layout_height="72dp"
        android:src="@drawable/ic_baseline_run_circle_24"
        app:layout_constraintBottom_toTopOf="@+id/logMethod"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        android:contentDescription="Run Icon" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="60dp"
        android:layout_height="72dp"
        android:src="@drawable/ic_baseline_directions_bike_24"
        app:layout_constraintBottom_toTopOf="@+id/logMethod"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="Cycle Icon" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="60dp"
        android:layout_height="72dp"
        android:src="@drawable/ic_baseline_waves_24"
        app:layout_constraintBottom_toTopOf="@+id/logMethod"
        app:layout_constraintEnd_toStartOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="Swim Icon" />


    <androidx.constraintlayout.widget.Group
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="imageView3,imageView2,imageView4" />


</androidx.constraintlayout.widget.ConstraintLayout>